noinst_LIBRARIES=libiosfc.a

libiosfc_a_SOURCES=ios_exception.cpp ios_stream.cpp ios_hash.cpp ios_memory.cpp \
            ios_message.cpp ios_standardmessage.cpp ios_udpmessage.cpp ios_messagebox.cpp \
            ios_udpmessagebox.cpp  ios_datagramsocket.cpp ios_igpmessagebox.cpp \
            ios_igpmessage.cpp ios_socket.cpp ios_igpclient.cpp ios_igpdatagram.cpp \
            ios_filemanager.cpp ios_time.cpp ios_httpdocument.cpp ios_thread.cpp \
            ios_igpmessagelistener.cpp ios_igpvirtualpeermessagebox.cpp ios_selector.cpp \
            ios_filepath.cpp ios_networkinterfacerequester.cpp

#libgametools_a_CXXFLAGS = -I../iosfc $(SDL_CFLAGS) $(AM_CXXFLAGS) $(FPFEATURES)

# SUBDIRS = iosfc gametools goomsl


include $(srcdir)/posix/Makefile.am
# include $(srcdir)/win32
